<resources>

    <!--Array strings-->
    <string name="supplier_local">Local</string>
    <string name="supplier_china">China</string>
    <string name="supplier_usa">USA</string>

    <string name="image_default">User\'s image</string>
    <string name="image_lamp">Lamp</string>
    <string name="image_table">Table</string>
    <string name="image_sofa">Sofa</string>

    <!--Other-->
    <string name="app_name">InventoryApp</string>
    <string name="sale">Sale</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="re_order">Re-order</string>
    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="insert_dummy_data">Insert dummy data</string>
    <string name="delete_all_items">Delete all items</string>
    <string name="add_new_item">Add new item</string>
    <string name="edit_item">Edit item</string>

    <string name="select_image">Select image</string>
    <string name="select_supplier">Select supplier</string>
    <string name="saving_error">Error with saving item</string>
    <string name="item_saved">Item was saved</string>
    <string name="error_updating">Error with updating item</string>
    <string name="item_updated">Item was updated</string>
    <string name="discard_changes">Discard changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="delete_item">Delete item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit_error_delete">Deleting item failed</string>
    <string name="edit_item_deleted">Item deleted</string>
    <string name="supplier">Supplier</string>
    <string name="add_or_select_image">Choose an image from the list or add your own</string>
    <string name="no_items_in_inventory">No items in inventory</string>
    <string name="quantity">Quantity:</string>
    <string name="must_have_name">Item must have a name.</string>
    <string name="add_image">Add image</string>
    <string name="euro" translatable="false">€</string>
    <string name="re_order_headline">Re-order</string>
    <string name="choose_item_image">Choose item image</string>
    <string name="no_name_error">An item must have a name.</string>
    <string name="no_price_error">Set a price with numbers only.</string>
    <string name="no_descr_error">Item must have a description</string>
    <string name="no_quantity_error">Set quantity.</string>
    <string name="no_image_error">Choose an image or add a new one.</string>
</resources>
