<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minus"
                android:layout_width="@dimen/plus_minus_width"
                android:layout_height="@dimen/plus_minus_height"
                android:layout_marginRight="@dimen/margin"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/minus"
                android:textColor="@color/icons" />

            <TextView
                android:id="@+id/quantity_label"
                android:layout_width="@dimen/quantity_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/min_margin"
                android:layout_marginTop="@dimen/min_margin"
                android:layout_toRightOf="@+id/minus"
                android:text="@string/quantity"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/edit_quantity"
                android:layout_width="@dimen/quantity_width"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/min_margin"
                android:layout_marginTop="@dimen/min_margin"
                android:layout_toRightOf="@+id/quantity_label"
                android:textAlignment="center"
                tools:text="88" />

            <Button
                android:id="@+id/plus"
                android:layout_width="@dimen/plus_minus_width"
                android:layout_height="@dimen/plus_minus_height"
                android:layout_toRightOf="@+id/edit_quantity"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/plus"
                android:textColor="@color/icons" />
        </RelativeLayout>

        <TextView
            android:id="@+id/image_spinner_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:inputType="textCapWords"
            android:text="@string/add_or_select_image"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Spinner
                android:id="@+id/image_spinner"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/spinner_height"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:prompt="@string/select_image"
                android:spinnerMode="dialog"></Spinner>

            <Button
                android:id="@+id/add_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_toRightOf="@+id/image_spinner"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/add_image" />
        </RelativeLayout>

        <View
            android:layout_width="@dimen/line_width"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/edit_image"
                android:layout_width="@dimen/editor_pic_width"
                android:layout_height="@dimen/editor_pic_width"
                android:layout_margin="@dimen/min_margin" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="@dimen/min_padding">

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textCapWords" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/price"
                        android:inputType="textCapWords" />

                    <EditText
                        android:id="@+id/edit_price_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:hint="@string/euro" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:paddingLeft="@dimen/min_padding"
                    android:text="@string/supplier" />

                <Spinner
                    android:id="@+id/spinner_suppliers"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/spinner_height"
                    android:paddingRight="@dimen/min_padding"
                    android:spinnerMode="dialog" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:hint="@string/description"
            android:inputType="textCapWords" />

        <Button
            android:id="@+id/edit_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/re_order"
            android:textColor="@color/icons" />
    </LinearLayout>
</ScrollView>